Add flash messages on add, edit, delete item

--- a/fullstack/templates/menu.html
+++ b/fullstack/templates/menu.html
@@ -18,4 +18,6 @@
   {% else %}
     <p>No items!</p>
   {% endfor %}
+
+  <a href="{{ url_for('add_item', restaurant_id=restaurant.id) }}">Add item</a>
 {% endblock %}
