--- a/fullstack/templates/base.html
+++ b/fullstack/templates/base.html
@@ -5,6 +5,16 @@
     <title>Full-Stack Foundations</title>
   </head>
   <body>
+    {% with messages = get_flashed_messages() %}
+    {% if messages %}
+    <ul>
+      {% for message in messages %}
+      <li>{{ message }}</li>
+      {% endfor %}
+    </ul>
+    {% endif %}
+    {% endwith %}
+
     {% block content %}{% endblock %}
   </body>
 </html>
