--- a/fullstack/templates/edit_item.html
+++ b/fullstack/templates/edit_item.html
@@ -1,12 +1,25 @@
 {% extends "base.html" %}
 
 {% block content %}
-  <h1>Edit {{ item.name }} from {{ restaurant.name }}</h1>
-  <form action="{{ url_for('edit_item', restaurant_id=restaurant.id, item_id=item.id) }}"
-      method="post">
-    <p>Name:</p>
-    <input type="text" name="name" value="{{ item.name }}" placeholder='Name of the item'>
-    <input type="submit" value="Submit">
-    <a href="{{ url_for('show_menu', restaurant_id=restaurant.id) }}">Back</a>
-  </form>
+<div class="container">
+  <div class="card">
+
+    <div class="card-body bg-dark text-white">
+      <h1 class="card-title">{{ restaurant.name }}</h1>
+    </div>
+    <div class="card-body">
+      <h3 class="card-text">Edit {{ item.name }} below.</h3>
+      <form action="{{ url_for('edit_item', restaurant_id=restaurant.id, item_id=item.id) }}"
+          method="post">
+        <div class="form-group">
+          <label for="name">Name</label>
+          <input class="form-control" type="text" name="name" placeholder='Name of the item'>
+        </div>
+        <a class="btn" href="{{ url_for('show_menu', restaurant_id=restaurant.id) }}">Back</a>
+        <button class="btn btn-primary" type="submit">Save</button>
+      </form>
+    </div>
+
+  </div>
+</div>
 {% endblock %}
