--- a/fullstack/templates/menu.html
+++ b/fullstack/templates/menu.html
@@ -1,23 +1,28 @@
 {% extends "base.html" %}
 
 {% block content %}
-  <h1>{{ restaurant.name }}</h1>
-  <hr>
-  {% for item in items  %}
-    <p>
-      {{ item.name }} ({{ item.price }})
-      <br>
-      {{ item.description}}
-      <br>
-      <a href="{{ url_for('edit_item', restaurant_id=restaurant.id, item_id=item.id) }}">
-        Edit</a>
-      <br>
-      <a href="{{ url_for('delete_item', restaurant_id=restaurant.id, item_id=item.id) }}">
-        Delete</a>
-    </p>
-  {% else %}
-    <p>No items!</p>
-  {% endfor %}
+  <div class="container">
+    <div class="card">
 
-  <a href="{{ url_for('add_item', restaurant_id=restaurant.id) }}">Add item</a>
+      <div class="card-body bg-dark text-white">
+        <h1 class="card-title">{{ restaurant.name }}</h1>
+        <a class="btn btn-primary" href="{{ url_for('add_item', restaurant_id=restaurant.id) }}">Add item</a>
+      </div>
+
+      <ul class="list-group list-group-flush">
+        {% for item in items %}
+        <li class="list-group-item">
+          {{ item.name }} ({{ item.price }})
+          <br>
+          <span class="text-muted">{{ item.description }}</span>
+          <br>
+          <a class="card-link" href="{{ url_for('edit_item', restaurant_id=restaurant.id, item_id=item.id) }}">
+            Edit</a>
+          <a class="card-link" href="{{ url_for('delete_item', restaurant_id=restaurant.id, item_id=item.id) }}">
+            Delete</a>
+        </li>
+        {% endfor %}
+      </ul>
+    </div>
+  </div>
 {% endblock %}
