--- a/restaurants/flask/templates/base.html
+++ b/restaurants/flask/templates/base.html
@@ -2,11 +2,24 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Full-Stack Foundations</title>
+    <title>{% block title %}Full-Stack Foundations{% endblock %}</title>
+
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
+
+    <!-- Custom styles -->
+    {% block style %}
+      <!-- Fonts:
+      Amaranth (regular, bold, bold-italic)
+      Open Sans (regular, bold) -->
+      <link href="https://fonts.googleapis.com/css?family=Amaranth:400,700,700i|Open+Sans:400,700" rel="stylesheet">
+    {% endblock %}
+
   </head>
+
   <body>
+
+    <!-- Flash messages -->
     <div class="container">
       {% with messages = get_flashed_messages() %}
         {% if messages %}
@@ -17,6 +30,7 @@
       {% endwith %}
     </div>
 
+    <!-- Main page content -->
     {% block content %}{% endblock %}
 
     <!-- Optional JavaScript -->
@@ -25,6 +39,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ" crossorigin="anonymous"></script>
 
+    <!-- Custom scripts -->
     {% block scripts %}
     <script type="text/javascript" src="{{ url_for('static', filename='js/script.js') }}"></script>
     {% endblock %}
