--- a/restaurants/flask/templates/add_item.html
+++ b/restaurants/flask/templates/add_item.html
@@ -1,25 +1,19 @@
 {% extends "base.html" %}
 
 {% block content %}
-<div class="container">
-  <div class="card">
+<div>
 
-    <div class="card-body bg-dark text-white">
-      <h1 class="card-title">{{ restaurant.name }}</h1>
-    </div>
-    <div class="card-body">
-      <h3 class="card-text">Add a menu item below.</h3>
-      <form action="{{ url_for('add_item', restaurant_id=restaurant.id) }}"
-          method="post">
-        <div class="form-group">
-          <label for="name">Name</label>
-          <input class="form-control" type="text" name="name" placeholder='Name of the item'>
-        </div>
-        <a class="btn" href="{{ url_for('show_menu', restaurant_id=restaurant.id) }}">Back</a>
-        <button class="btn btn-primary" type="submit">Add</button>
-      </form>
-    </div>
+    <h1>{{ restaurant.name }}</h1>
 
-  </div>
+    <h3>Add a menu item</h3>
+    <form action="{{ url_for('add_item', restaurant_id=restaurant.id) }}"
+        method="post">
+      <label for="name">Name :</label>
+      <input type="text" name="name" placeholder='Name of the item'>
+      <button class="btn success" type="submit">Add</button>
+    </form>
+
+    <br>
+    <a class="btn" href="{{ url_for('restaurant_detail', restaurant_id=restaurant.id) }}">Back</a>
 </div>
 {% endblock %}
