--- a/restaurants/flask/templates/base.html
+++ b/restaurants/flask/templates/base.html
@@ -4,15 +4,13 @@
     <meta charset="utf-8">
     <title>{% block title %}Full-Stack Foundations{% endblock %}</title>
 
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
-
     <!-- Custom styles -->
     {% block style %}
-      <!-- Fonts:
-      Amaranth (regular, bold, bold-italic)
-      Open Sans (regular, bold) -->
-      <link href="https://fonts.googleapis.com/css?family=Amaranth:400,700,700i|Open+Sans:400,700" rel="stylesheet">
+      <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
+      <!-- Amaranth: italic, bold-italic -->
+      <link href="https://fonts.googleapis.com/css?family=Amaranth:400i,700i" rel="stylesheet">
+      <!-- Signika: regular, bold -->
+      <link href="https://fonts.googleapis.com/css?family=Signika:400,700" rel="stylesheet">
     {% endblock %}
 
   </head>
@@ -24,20 +22,35 @@
       {% with messages = get_flashed_messages() %}
         {% if messages %}
         {% for message in messages %}
-        <div class="alert alert-success" role="alert">{{ message }}</div>
+        <div class="success" role="alert">{{ message }}</div>
         {% endfor %}
         {% endif %}
       {% endwith %}
     </div>
 
+    {% block nav %}
+    <nav class="header">
+      <ul>
+        <li class="nav-brand">
+          <h1><a href="{{ url_for('index') }}">Restaurants</a></h1>
+          {% block after_brand %}
+          {% endblock %}
+        </li>
+        <li>
+          <form class="searchbox" action="http://www.google.com/search" method="get">
+            <input class="search" type="text" placeholder="Type your search…" name="q" />
+            <input type="submit" class="btn btn-secondary" value="Search"/>
+          </form>
+        </li>
+      </ul>
+    </nav>
+    {% endblock %}
+
     <!-- Main page content -->
     {% block content %}{% endblock %}
 
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <!-- jQuery -->
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh" crossorigin="anonymous"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ" crossorigin="anonymous"></script>
 
     <!-- Custom scripts -->
     {% block scripts %}
