--- a/restaurants/flask/templates/edit_item.html
+++ b/restaurants/flask/templates/edit_item.html
@@ -1,25 +1,15 @@
 {% extends "base.html" %}
 
 {% block content %}
-<div class="container">
-  <div class="card">
 
-    <div class="card-body bg-dark text-white">
-      <h1 class="card-title">{{ restaurant.name }}</h1>
-    </div>
-    <div class="card-body">
-      <h3 class="card-text">Edit {{ item.name }} below.</h3>
-      <form action="{{ url_for('edit_item', restaurant_id=restaurant.id, item_id=item.id) }}"
-          method="post">
-        <div class="form-group">
-          <label for="name">Name</label>
-          <input class="form-control" type="text" name="name" placeholder='Name of the item' value="{{ item.name }}">
-        </div>
-        <a class="btn" href="{{ url_for('show_menu', restaurant_id=restaurant.id) }}">Back</a>
-        <button class="btn btn-primary" type="submit">Save</button>
-      </form>
-    </div>
-
-  </div>
-</div>
+<h1 class="card-title">{{ restaurant.name }}</h1>
+<h3>Edit {{ item.name }} below.</h3>
+<form action="{{ url_for('edit_item', restaurant_id=restaurant.id, item_id=item.id) }}"
+    method="post">
+    <label for="name">Name</label>
+    <input type="text" name="name" placeholder='Name of the item' value="{{ item.name }}">
+  <button class="btn success" type="submit">Save</button>
+</form>
+<br>
+<a class="btn" href="{{ url_for('restaurant_detail', restaurant_id=restaurant.id) }}">Back</a>
 {% endblock %}
