--- a/restaurants/flask/templates/menu.html
+++ b/restaurants/flask/templates/menu.html
@@ -1,28 +1,22 @@
 {% extends "base.html" %}
 
 {% block content %}
-  <div class="container">
-    <div class="card">
 
-      <div class="card-body bg-dark text-white">
-        <h1 class="card-title">{{ restaurant.name }}</h1>
-        <a class="btn btn-primary" href="{{ url_for('add_item', restaurant_id=restaurant.id) }}">Add item</a>
-      </div>
+<h1>{{ restaurant.name }}</h1>
+<a class="btn success" href="{{ url_for('add_item', restaurant_id=restaurant.id) }}">Add item</a>
 
-      <ul class="list-group list-group-flush">
-        {% for item in items %}
-        <li class="list-group-item">
-          {{ item.name }} ({{ item.price }})
-          <br>
-          <span class="text-muted">{{ item.description }}</span>
-          <br>
-          <a class="card-link" href="{{ url_for('edit_item', restaurant_id=restaurant.id, item_id=item.id) }}">
-            Edit</a>
-          <a class="card-link" href="{{ url_for('delete_item', restaurant_id=restaurant.id, item_id=item.id) }}">
-            Delete</a>
-        </li>
-        {% endfor %}
-      </ul>
-    </div>
-  </div>
+<ul>
+{% for item in items %}
+  <li>
+    {{ item.name }} ({{ item.price }})
+    <br>
+    <span>{{ item.description }}</span>
+    <br>
+    <a href="{{ url_for('edit_item', restaurant_id=restaurant.id, item_id=item.id) }}">
+      Edit</a>
+    <a href="{{ url_for('delete_item', restaurant_id=restaurant.id, item_id=item.id) }}">
+      Delete</a>
+  </li>
+{% endfor %}
+</ul>
 {% endblock %}
