--- a/restaurants/flask/templates/base.html
+++ b/restaurants/flask/templates/base.html
@@ -30,20 +30,21 @@
 
     {% block nav %}
     <nav class="header">
-      <ul>
-        <li class="nav-brand">
-          <h1><a href="{{ url_for('index') }}">Restaurants</a></h1>
+      <ul class="inline">
+        <li class="inline">
+          <h1 class="brand"><a href="{{ url_for('index') }}">Restaurants</a></h1>
           {% block after_brand %}
           {% endblock %}
         </li>
         <li>
-          <form class="searchbox" action="http://www.google.com/search" method="get">
+          <form action="http://www.google.com/search" method="get">
             <input class="search" type="text" placeholder="Type your search…" name="q" />
             <input type="submit" class="btn btn-secondary" value="Search"/>
           </form>
         </li>
       </ul>
     </nav>
+
     {% endblock %}
 
     <!-- Main page content -->
