--- a/restaurants/flask/templates/edit_restaurant.html
+++ b/restaurants/flask/templates/edit_restaurant.html
@@ -2,16 +2,13 @@
 
 {% block content %}
 
-<h1>{{ restaurant.name }}</h1>
-<h3>Edit {{ item.name }} below.</h3>
-
-<form action="{{ url_for('edit_item', restaurant_id=restaurant.id, item_id=item.id) }}"
+<h1>Edit {{ restaurant.name }}</h1>
+<form action="{{ url_for('edit_restaurant', restaurant_id=restaurant.id) }}"
     method="post">
     <label for="name">Name</label>
-    <input type="text" name="name" placeholder='Name of the item' value="{{ item.name }}">
+    <input type="text" name="name" placeholder='Name of the restaurant' value="{{ restaurant.name }}">
   <button class="btn success" type="submit">Save</button>
 </form>
-
 <br>
 <a class="btn" href="{{ url_for('restaurant_detail', restaurant_id=restaurant.id) }}">Back</a>
 {% endblock %}
