--- a/restaurants/flask/templates/restaurant_detail.html
+++ b/restaurants/flask/templates/restaurant_detail.html
@@ -2,8 +2,18 @@
 
 {% block content %}
 
-<h1>{{ restaurant.name }}</h1>
-<a class="btn success" href="{{ url_for('add_item', restaurant_id=restaurant.id) }}">Add item</a>
+
+<ul class="inline">
+  <li class="inline">
+    <h1>{{ restaurant.name }}</h1>
+    <a class="btn success" href="{{ url_for('add_item', restaurant_id=restaurant.id) }}">Add item</a>
+  </li>
+  <li>
+    <a class="btn warning" href="{{ url_for('edit_restaurant', restaurant_id=restaurant.id) }}">Edit</a>
+    <a class="btn danger" href="{{ url_for('delete_restaurant', restaurant_id=restaurant.id) }}">Delete</a>
+  </li>
+</ul>
+
 
 <ul>
 {% for item in items %}
