--- a/restaurants/flask/templates/add_restaurant.html
+++ b/restaurants/flask/templates/add_restaurant.html
@@ -7,7 +7,7 @@
     method="post">
   <label for="name">Name :</label>
   <input type="text" name="name" placeholder='Name of the restaurant'>
-  <button class="btn success" type="submit">Add</button>
+  <button class="btn-success" type="submit">Add</button>
 </form>
 
 <br>
