--- a/restaurants/flask/templates/delete_restaurant.html
+++ b/restaurants/flask/templates/delete_restaurant.html
@@ -6,6 +6,6 @@
 <form action="{{ url_for('delete_restaurant', restaurant_id=restaurant.id) }}"
     method="post">
   <a class="btn" href="{{ url_for('restaurant_detail', restaurant_id=restaurant.id) }}">Back</a>
-  <button class="btn danger" type="submit">Yes, delete</button>
+  <button class="btn-danger" type="submit">Yes, delete</button>
 </form>
 {% endblock %}
