--- a/restaurants/flask/templates/edit_item.html
+++ b/restaurants/flask/templates/edit_item.html
@@ -9,7 +9,7 @@
     method="post">
     <label for="name">Name</label>
     <input type="text" name="name" placeholder='Name of the item' value="{{ item.name }}">
-  <button class="btn success" type="submit">Save</button>
+  <button class="btn-success" type="submit">Save</button>
 </form>
 
 <br>
