--- a/restaurants/flask/static/css/style.css
+++ b/restaurants/flask/static/css/style.css
@@ -56,7 +56,7 @@ a {
   .btn:hover {
     background-color: #3b979f; }
 
-.success {
+.btn-success {
   border: 1px solid #1c6d19;
   -webkit-border-radius: 5px;
   -moz-border-radius: 5px;
@@ -68,10 +68,10 @@ a {
   font-size: inherit;
   font-family: inherit;
   transition: background-color 0.1s cubic-bezier(0.33, 0.66, 0.66, 1); }
-  .success:hover {
+  .btn-success:hover {
     background-color: #17c013; }
 
-.warning {
+.btn-warning {
   border: 1px solid #b67e00;
   -webkit-border-radius: 5px;
   -moz-border-radius: 5px;
@@ -83,10 +83,10 @@ a {
   font-size: inherit;
   font-family: inherit;
   transition: background-color 0.1s cubic-bezier(0.33, 0.66, 0.66, 1); }
-  .warning:hover {
+  .btn-warning:hover {
     background-color: #ffb104; }
 
-.danger {
+.btn-danger {
   border: 1px solid #ad1211;
   -webkit-border-radius: 5px;
   -moz-border-radius: 5px;
@@ -98,8 +98,56 @@ a {
   font-size: inherit;
   font-family: inherit;
   transition: background-color 0.1s cubic-bezier(0.33, 0.66, 0.66, 1); }
-  .danger:hover {
+  .btn-danger:hover {
     background-color: #ff0d0c; }
+
+.alert {
+  border: 1px solid #345659;
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  -ms-border-radius: 5px;
+  border-radius: 5px;
+  background-color: #477579;
+  color: white;
+  padding: 8px 16px;
+  font-size: inherit;
+  font-family: inherit; }
+
+.alert-success {
+  border: 1px solid #1c6d19;
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  -ms-border-radius: 5px;
+  border-radius: 5px;
+  background-color: #269623;
+  color: white;
+  padding: 8px 16px;
+  font-size: inherit;
+  font-family: inherit; }
+
+.alert-warning {
+  border: 1px solid #b67e00;
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  -ms-border-radius: 5px;
+  border-radius: 5px;
+  background-color: #e9a100;
+  color: white;
+  padding: 8px 16px;
+  font-size: inherit;
+  font-family: inherit; }
+
+.alert-danger {
+  border: 1px solid #ad1211;
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  -ms-border-radius: 5px;
+  border-radius: 5px;
+  background-color: #db1716;
+  color: white;
+  padding: 8px 16px;
+  font-size: inherit;
+  font-family: inherit; }
 
 h1.brand {
   font-size: 55px; }
@@ -124,5 +172,34 @@ input {
   input::-webkit-input-placeholder {
     font-style: italic;
     color: #9fd0d4; }
+
+ul.restaurant-cards {
+  margin: 0;
+  padding: 0;
+  list-style-type: none;
+  display: grid;
+  grid-template-columns: repeat(5, 1fr);
+  grid-gap: 20px; }
+  ul.restaurant-cards .restaurant-card {
+    display: block; }
+    ul.restaurant-cards .restaurant-card .restaurant-card-picture {
+      border: 2px solid white;
+      -webkit-border-radius: 2px;
+      -moz-border-radius: 2px;
+      -ms-border-radius: 2px;
+      border-radius: 2px;
+      -moz-box-shadow: 0px -1px 5px 0px #222;
+      -webkit-box-shadow: 0px -1px 5px 0px #222;
+      -o-box-shadow: 0px -1px 5px 0px #222;
+      box-shadow: 0px -1px 5px 0px #222;
+      border: none;
+      display: block;
+      width: 100%;
+      height: auto; }
+    ul.restaurant-cards .restaurant-card .restaurant-card-title {
+      padding: 10px;
+      text-align: center; }
+      ul.restaurant-cards .restaurant-card .restaurant-card-title a {
+        vertical-align: middle; }
 
 /*# sourceMappingURL=style.css.map */
