--- a/restaurants/flask/templates/add_item.html
+++ b/restaurants/flask/templates/add_item.html
@@ -8,7 +8,7 @@
     method="post">
   <label for="name">Name :</label>
   <input type="text" name="name" placeholder='Name of the item'>
-  <button class="btn success" type="submit">Add</button>
+  <button class="btn-success" type="submit">Add</button>
 </form>
 
 <br>
