--- a/restaurants/flask/templates/base.html
+++ b/restaurants/flask/templates/base.html
@@ -22,7 +22,7 @@
       {% with messages = get_flashed_messages() %}
         {% if messages %}
         {% for message in messages %}
-        <div class="success" role="alert">{{ message }}</div>
+        <div class="alert-success" role="alert">{{ message }}</div>
         {% endfor %}
         {% endif %}
       {% endwith %}
