--- a/restaurants/flask/templates/edit_restaurant.html
+++ b/restaurants/flask/templates/edit_restaurant.html
@@ -7,7 +7,7 @@
     method="post">
     <label for="name">Name</label>
     <input type="text" name="name" placeholder='Name of the restaurant' value="{{ restaurant.name }}">
-  <button class="btn success" type="submit">Save</button>
+  <button class="btn-success" type="submit">Save</button>
 </form>
 <br>
 <a class="btn" href="{{ url_for('restaurant_detail', restaurant_id=restaurant.id) }}">Back</a>
