--- a/restaurants/flask/templates/edit_item.html
+++ b/restaurants/flask/templates/edit_item.html
@@ -7,9 +7,28 @@
 
 <form action="{{ url_for('edit_item', restaurant_id=restaurant.id, item_id=item.id) }}"
     method="post">
-    <label for="name">Name</label>
+  <div class="form-group">
+    <label for="name">Name :</label>
     <input type="text" name="name" placeholder='Name of the item' value="{{ item.name }}">
-  <button class="btn-success" type="submit">Save</button>
+  </div>
+  <div class="form-group">
+    <label for="course">Course :</label>
+    <select name="course" value="{{ item.course }}">
+      <option value="Entree">Entree</option>
+      <option value="Dessert">Dessert</option>
+      <option value="Appetizer">Appetizer</option>
+      <option value="Beverage">Beverage</option>
+    </select>
+  </div>
+  <div class="form-group">
+    <label for="description">Description :</label>
+    <textarea name="description" rows="3" cols="80" placeholder='A short description of the item' value="{{ item.description }}"></textarea>
+  </div>
+  <div class="form-group">
+    <label for="price">Price ($) :</label>
+    <input type="text" name="price" placeholder="Price of the item" value="{{ item.price }}">
+  </div>
+  <button class="btn-success" type="submit">Add</button>
 </form>
 
 <br>
