--- a/restaurants/flask/static/css/style.css
+++ b/restaurants/flask/static/css/style.css
@@ -26,20 +26,49 @@ ul.inline {
       display: inline-block;
       width: 32px; }
 
-h1, h2, h3, h4, h5, h6 {
+h1, h2, h3 {
   font-family: "Amaranth", sans-serif;
   font-style: italic; }
 
-h3, h4, h5, h6 {
-  font-weight: normal; }
+h4, h5, h6 {
+  font-family: "Amaranth", sans-serif;
+  font-style: normal; }
 
 a {
   color: inherit;
   text-decoration: none;
   border-bottom: 2px solid #25986c;
-  transition: background 0.1s cubic-bezier(0.33, 0.66, 0.66, 1); }
+  transition: background 0.1s cubic-bezier(0.33, 0.66, 0.66, 1);
+  padding: 0 4px; }
   a:hover {
     background: #25986c; }
+
+a.success {
+  color: inherit;
+  text-decoration: none;
+  border-bottom: 2px solid #269623;
+  transition: background 0.1s cubic-bezier(0.33, 0.66, 0.66, 1);
+  padding: 0 4px; }
+  a.success:hover {
+    background: #269623; }
+
+a.warning {
+  color: inherit;
+  text-decoration: none;
+  border-bottom: 2px solid #e9a100;
+  transition: background 0.1s cubic-bezier(0.33, 0.66, 0.66, 1);
+  padding: 0 4px; }
+  a.warning:hover {
+    background: #e9a100; }
+
+a.danger {
+  color: inherit;
+  text-decoration: none;
+  border-bottom: 2px solid #db1716;
+  transition: background 0.1s cubic-bezier(0.33, 0.66, 0.66, 1);
+  padding: 0 4px; }
+  a.danger:hover {
+    background: #db1716; }
 
 .btn {
   border: 1px solid #345659;
@@ -201,5 +230,46 @@ ul.restaurant-cards {
       text-align: center; }
       ul.restaurant-cards .restaurant-card .restaurant-card-title a {
         vertical-align: middle; }
+
+.menu {
+  background-color: #25986c;
+  padding: 20px;
+  max-width: 500px; }
+  .menu ul {
+    margin: 0;
+    padding: 0;
+    list-style-type: none; }
+  .menu .menu-title {
+    font-size: 40px;
+    text-align: center;
+    padding: 0;
+    margin-top: 0; }
+  .menu .menu-item {
+    margin-bottom: 1.5em;
+    display: grid;
+    grid-template-columns: auto 60px;
+    grid-template-rows: repeat(3, auto); }
+    .menu .menu-item .left {
+      grid-column: 1; }
+    .menu .menu-item .right {
+      grid-column: 2;
+      margin-left: 10px;
+      text-align: right; }
+    .menu .menu-item .item-name {
+      margin: 0;
+      padding: 0; }
+    .menu .menu-item .item-price {
+      margin: 0;
+      padding: 0; }
+    .menu .menu-item .item-description {
+      margin: 0;
+      margin-top: 3px;
+      margin-bottom: 3px;
+      padding: 0;
+      color: #9fd0d4; }
+    .menu .menu-item .edit-delete {
+      display: flex;
+      justify-content: flex-start;
+      align-items: center; }
 
 /*# sourceMappingURL=style.css.map */
