--- a/restaurants/flask/static/sass/style.scss
+++ b/restaurants/flask/static/sass/style.scss
@@ -51,9 +51,9 @@ $color-hover: lighten($color-primary, 10%);
   &::-webkit-input-placeholder { @content };
 }
 
-@mixin inline-elements {
+@mixin inline-elements($justify: space-between) {
   display:flex;
-  justify-content: space-between;
+  justify-content: $justify;
   align-items: center;
 }
 
@@ -96,22 +96,39 @@ ul.inline {
 
 // Components
 
-h1, h2, h3, h4, h5, h6 {
+h1, h2, h3 {
   font-family: $title-font;
   font-style: italic;
 }
-h3, h4, h5, h6 {
-  font-weight: normal;
+h4, h5, h6 {
+  font-family: $title-font;
+  font-style: normal;
+}
+
+
+@mixin link($bg) {
+  color: inherit;
+  text-decoration: none;
+  border-bottom: 2px solid $bg;
+  transition: background 0.1s cubic-bezier(.33,.66,.66,1);
+  padding: 0 4px;
+  &:hover {
+    background: $bg;
+  }
 }
 
 a {
-  color: inherit;
-  text-decoration: none;
-  border-bottom: 2px solid $color-primary;
-  transition: background 0.1s cubic-bezier(.33,.66,.66,1);
-  &:hover {
-    background: $color-primary;
-  }
+  @include link($color-primary);
+}
+
+a.success {
+  @include link($color-success);
+}
+a.warning {
+  @include link($color-warning);
+}
+a.danger {
+  @include link($color-danger);
 }
 
 
@@ -215,6 +232,57 @@ ul.restaurant-cards {
       a {
         vertical-align: middle;
       }
+    }
+  }
+}
+
+
+.menu {
+  background-color: $color-primary;
+  padding: 20px;
+  max-width: 500px;
+
+  ul {
+    @include plain-ul;
+  }
+
+  .menu-title {
+    font-size: 40px;
+    text-align: center;
+    padding: 0;
+    margin-top: 0;
+  }
+
+  .menu-item {
+    margin-bottom: 1.5em;
+    display: grid;
+    grid-template-columns: auto 60px;
+    grid-template-rows: repeat(3, auto);
+    .left {
+      grid-column: 1;
+    }
+    .right {
+      grid-column: 2;
+      margin-left: 10px;
+      text-align: right;
+    }
+    .item-name {
+      margin: 0;
+      padding: 0;
+    }
+    .item-price {
+      margin: 0;
+      padding: 0;
+    }
+    .item-description {
+      margin: 0;
+      margin-top: 3px;
+      margin-bottom: 3px;
+      padding: 0;
+      color: $color-secondary-lighter;
+    }
+    .edit-delete {
+      @include inline-elements(flex-start);
     }
   }
 }
