--- a/restaurants/flask/templates/delete_item.html
+++ b/restaurants/flask/templates/delete_item.html
@@ -1,12 +1,11 @@
 {% extends "base.html" %}
 
 {% block content %}
-<h1>{{ restaurant.name }}</h1>
+<h1><a href="{{ url_for('restaurant_detail', restaurant_id=restaurant.id) }}">{{ restaurant.name }}</a></h1>
 <h3>Delete {{ item.name }}?</h3>
 
 <form action="{{ url_for('delete_item', restaurant_id=restaurant.id, item_id=item.id) }}"
     method="post">
-  <a class="btn" href="{{ url_for('restaurant_detail', restaurant_id=restaurant.id) }}">Back</a>
   <button class="btn-danger" type="submit">Yes, delete</button>
 </form>
 {% endblock %}
