--- a/restaurants/flask/templates/edit_item.html
+++ b/restaurants/flask/templates/edit_item.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 
-<h1>{{ restaurant.name }}</h1>
+<h1><a href="{{ url_for('restaurant_detail', restaurant_id=restaurant.id) }}">{{ restaurant.name }}</a></h1>
 <h3>Edit {{ item.name }} below.</h3>
 
 <form action="{{ url_for('edit_item', restaurant_id=restaurant.id, item_id=item.id) }}"
@@ -28,9 +28,6 @@
     <label for="price">Price ($) :</label>
     <input type="text" name="price" placeholder="Price of the item" value="{{ item.price }}">
   </div>
-  <button class="btn-success" type="submit">Add</button>
+  <button class="btn-success" type="submit">Save</button>
 </form>
-
-<br>
-<a class="btn" href="{{ url_for('restaurant_detail', restaurant_id=restaurant.id) }}">Back</a>
 {% endblock %}
