--- a/restaurants/flask/templates/edit_restaurant.html
+++ b/restaurants/flask/templates/edit_restaurant.html
@@ -2,13 +2,12 @@
 
 {% block content %}
 
-<h1>Edit {{ restaurant.name }}</h1>
+<h1>Edit <a href="{{ url_for('restaurant_detail', restaurant_id=restaurant.id) }}">{{ restaurant.name }}</a></h1>
 <form action="{{ url_for('edit_restaurant', restaurant_id=restaurant.id) }}"
     method="post">
-    <label for="name">Name</label>
-    <input type="text" name="name" placeholder='Name of the restaurant' value="{{ restaurant.name }}">
+  <label for="name">Name</label>
+  <input type="text" name="name" placeholder='Name of the restaurant' value="{{ restaurant.name }}">
+  <br>
   <button class="btn-success" type="submit">Save</button>
 </form>
-<br>
-<a class="btn" href="{{ url_for('restaurant_detail', restaurant_id=restaurant.id) }}">Back</a>
 {% endblock %}
