--- a/restaurants/flask/templates/restaurant_detail.html
+++ b/restaurants/flask/templates/restaurant_detail.html
@@ -5,7 +5,7 @@
 
 <ul class="inline">
   <li class="inline">
-    <h1>{{ restaurant.name }}</h1>
+    <h1><a href="{{ url_for('restaurant_detail', restaurant_id=restaurant.id) }}">{{ restaurant.name }}</a></h1>
     <a class="btn-success" href="{{ url_for('add_item', restaurant_id=restaurant.id) }}">Add item</a>
   </li>
   <li>
@@ -15,18 +15,22 @@
 </ul>
 
 
-<ul>
-{% for item in items %}
-  <li>
-    {{ item.name }} ({{ item.price }})
-    <br>
-    <span>{{ item.description }}</span>
-    <br>
-    <a href="{{ url_for('edit_item', restaurant_id=restaurant.id, item_id=item.id) }}">
-      Edit</a>
-    <a href="{{ url_for('delete_item', restaurant_id=restaurant.id, item_id=item.id) }}">
-      Delete</a>
-  </li>
-{% endfor %}
-</ul>
+<div class="menu">
+  <h1 class="menu-title">Menu</h1>
+  <ul>
+  {% for item in items %}
+    <li class="menu-item">
+      <section class="left">
+        <h4 class="item-name">{{ item.name }}</h4>
+        <p class="item-description">{{ item.description }}</p>
+        <a class="warning" href="{{ url_for('edit_item', restaurant_id=restaurant.id, item_id=item.id) }}">Edit</a>
+        <a class="danger" href="{{ url_for('delete_item', restaurant_id=restaurant.id, item_id=item.id) }}">Delete</a>
+      </section>
+      <section class="right">
+        <h4 class="item-price">{{ item.price }}</h4>
+      </section>
+    </li>
+  {% endfor %}
+  </ul>
+</div>
 {% endblock %}
