--- a/restaurants/flask/templates/edit_item.html
+++ b/restaurants/flask/templates/edit_item.html
@@ -22,7 +22,7 @@
   </div>
   <div class="form-group">
     <label for="description">Description :</label>
-    <textarea name="description" rows="3" cols="80" placeholder='A short description of the item' value="{{ item.description }}"></textarea>
+    <textarea name="description" rows="3" cols="80" placeholder='A short description of the item'>{{ item.description }}</textarea>
   </div>
   <div class="form-group">
     <label for="price">Price ($) :</label>
