add price formatting, add currency modification support

--- a/restaurants/flask/templates/add_item.html
+++ b/restaurants/flask/templates/add_item.html
@@ -24,7 +24,7 @@
     <textarea name="description" rows="3" cols="80" placeholder='A short description of the item'></textarea>
   </div>
   <div class="form-group">
-    <label for="price">Price ($) :</label>
+    <label for="price">Price ({{ currency }}) :</label>
     <input type="text" name="price" placeholder="Price of the item">
   </div>
   <button class="btn-success" type="submit">Add</button>
