--- a/restaurants/flask/templates/restaurant_detail.html
+++ b/restaurants/flask/templates/restaurant_detail.html
@@ -17,7 +17,8 @@
 
 <div class="menu">
   <h1 class="menu-title">Menu</h1>
-  <ul>
+  <hr>
+  <ul class="menu-items">
   {% for item in items %}
     <li class="menu-item">
       <section class="left">
